# extio_rtl_tcp

./: .gitmodules  CMakeLists.txt  ExtIO_RTL_TCP.sln  ExtIO_RTL_TCP.vcxproj  README.md  README_RTL_TCP.txt
.github/workflows/: build.yml  cmake.yml  publish.yml
src/: ExtIO_RTL.cpp  ExtIO_RTL.h  ExtIO_RTL.rc  LC_ExtIO_Types.h  config_file.cpp  config_file.h  dllmain.cpp  exports.def  resource.h
